<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Item" />

    <TextView
        android:id="@+id/tvPosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_posto" />

    <TextView
        android:id="@+id/tvLitros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_litros" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_valor" />

    <TextView
        android:id="@+id/tvKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_km" />
</LinearLayout>