<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuelForm">

    <TextView
        android:id="@+id/etID"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text=""
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPosto"
        android:layout_width="295dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etID"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etLitros"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPosto" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLitros" />

    <EditText
        android:id="@+id/etKm"
        android:layout_width="277dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/button"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Adicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etKm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="74dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:text="@string/IDform"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Posto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/Litros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPosto" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/Valor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLitros" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/KM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />
</androidx.constraintlayout.widget.ConstraintLayout>